# officeservice_object_editor

./: OAT.xml  README.md  bundle.json  object_editor.gni
client/: BUILD.gn  IObjectEditorClientCallback.idl
client/include/: object_editor_client.h  object_editor_client_callback.h  object_editor_client_callback_stub.h  object_editor_extension_death_recipient.h  object_editor_manager_proxy.h  object_editor_package_proxy.h
client/src/: object_editor_client.cpp  object_editor_client_callback.cpp  object_editor_client_callback_stub.cpp  object_editor_extension_death_recipient.cpp  object_editor_manager_proxy.cpp  object_editor_package_proxy.cpp
document/: BUILD.gn
document/include/: alloctable.h  dirtree.h  header.h  object_editor_document.h  pole.h  storage.h  stream.h  types.h  utils.h
document/src/: alloctable.cpp  dirtree.cpp  header.cpp  object_editor_document.cpp  pole.cpp  storage.cpp  stream.cpp  utils.cpp
etc/: BUILD.gn  diversion_map.json  (+1 more)
frameworks/kits/extension/: BUILD.gn
frameworks/kits/extension/include/: i_object_editor_extension_ability.h  object_editor_extension.h  object_editor_extension_ability_stub.h  object_editor_extension_context.h  object_editor_extension_module_loader.h
frameworks/kits/extension/src/: object_editor_extension.cpp  object_editor_extension_context.cpp  object_editor_extension_module_loader.cpp
frameworks/ndk/: BUILD.gn
frameworks/ndk/include/: native_object_editor_types.h  object_editor_native_common.h
frameworks/ndk/src/: object_editor_document_capi.cpp  object_editor_extension_capi.cpp  object_editor_native_common.cpp  object_editor_proxy_capi.cpp
system_ability/: BUILD.gn  IObjectEditorManager.idl
system_ability/include/: iobject_editor_connection_status_callback.h  object_editor_client_death_recipient.h  object_editor_connection.h  object_editor_manager_stub.h  object_editor_manager_system_ability.h
system_ability/src/: object_editor_client_death_recipient.cpp  object_editor_connection.cpp  object_editor_manager_stub.cpp  object_editor_manager_system_ability.cpp
test/fuzztest/frameworks/ndk/proxy/: BUILD.gn
test/fuzztest/frameworks/ndk/proxy/ohcontentembedcreatecontentembedformat_fuzzer/: oh_contentembed_createcontentembedformat.cpp  oh_contentembed_createcontentembedformat.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedcreatecontentembedinfo_fuzzer/: oh_contentembed_createcontentembedinfo_fuzzer.cpp  oh_contentembed_createcontentembedinfo_fuzzer.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedcreateextensionproxy_fuzzer/: oh_contentembed_createextensionproxy.cpp  oh_contentembed_createextensionproxy.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembeddestroycontentembedformat_fuzzer/: oh_contentembed_destroycontentembedformat.cpp  oh_contentembed_destroycontentembedformat.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembeddestroycontentembedinfo_fuzzer/: oh_contentembed_destroycontentembedinfo_fuzzer.cpp  oh_contentembed_destroycontentembedinfo_fuzzer.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembeddestroyextensionproxy_fuzzer/: oh_contentembed_destroyextensionproxy.cpp  oh_contentembed_destroyextensionproxy.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedformatgethmid_fuzzer/: oh_contentembed_format_gethmid.cpp  oh_contentembed_format_gethmid.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedformatgetoeid_fuzzer/: oh_contentembed_format_getoeid.cpp
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgetcontentembedformatbyhmidandlocale_fuzzer/: oh_contentembed_getcontentembedformatbyhmidandlocale_fuzzer.cpp  oh_contentembed_getcontentembedformatbyhmidandlocale_fuzzer.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgetcontentembedformatbyoeidandlocale_fuzzer/: oh_contentembed_getcontentembedformatbyoeidandlocale_fuzzer.cpp
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgetcontentembedinfo_fuzzer/: oh_contentembed_getcontentembedinfo_fuzzer.cpp  oh_contentembed_getcontentembedinfo_fuzzer.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgetfilenameextensionsfromformat_fuzzer/: oh_contentembed_getfilenameextensionsfromformat.cpp  oh_contentembed_getfilenameextensionsfromformat.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgetformatfrominfo_fuzzer/: oh_contentembed_getformatfrominfo.cpp  oh_contentembed_getformatfrominfo.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgeticonfromformat_fuzzer/: oh_contentembed_geticonfromformat.cpp  oh_contentembed_geticonfromformat.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedgetnameanddescriptionfromformat_fuzzer/: oh_contentembed_getnameanddescriptionfromformat.cpp  oh_contentembed_getnameanddescriptionfromformat.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedinfogetformatcount_fuzzer/: oh_contentembed_info_getformatcount.cpp  oh_contentembed_info_getformatcount.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedproxyregisteroneditingfinishedfunc_fuzzer/: oh_contentembed_proxy_registeroneditingfinishedfunc.cpp  oh_contentembed_proxy_registeroneditingfinishedfunc.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedproxyregisteronerrorfunc_fuzzer/: oh_contentembed_proxy_registeronerrorfunc.cpp  oh_contentembed_proxy_registeronerrorfunc.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedproxyregisteronextensionstoppedfunc_fuzzer/: oh_contentembed_proxy_registeronextensionstoppedfunc.cpp  oh_contentembed_proxy_registeronextensionstoppedfunc.h
test/fuzztest/frameworks/ndk/proxy/ohcontentembedproxyregisteronupdatefunc_fuzzer/: oh_contentembed_proxy_registeronupdatefunc.cpp  oh_contentembed_proxy_registeronupdatefunc.h
test/unittest/system_ability/: BUILD.gn  object_editor_manager_stub_test.cpp  object_editor_manager_system_ability_test.cpp
utils/: BUILD.gn
utils/include/: object_editor_bms_utils.h  object_editor_event_manager.h  object_editor_permission_utils.h  object_editor_screen_change_receiver.h
utils/include/dfx/: hilog_object_editor.h
utils/src/: object_editor_bms_utils.cpp  object_editor_event_manager.cpp  object_editor_permission_utils.cpp  object_editor_screen_change_receiver.cpp
(+81 files in other folders)
