# Copyright (c) Huawei Device Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

object_editor_path = "//foundation/officeservice/object_editor"

kits_path = "${object_editor_path}/interfaces/kits/"

ndk_path = "${object_editor_path}/frameworks/ndk"

declare_args() {
  object_editor_dlp_part_enabled = true
  if (defined(global_parts_info) &&
      !defined(global_parts_info.security_dlp_permission_service)) {
    object_editor_dlp_part_enabled = false
  }
}