# Copyright (c) Huawei Device Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/officeservice/object_editor/object_editor.gni")

config("libobject_editor_service_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${object_editor_path}/system_ability/include",
    "${object_editor_path}/common/include",
    "${innerkits_path}/include",
    "${kits_path}/c",
    "${object_editor_path}/document/include",
    "${object_editor_path}/database/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/extension_ability/include",
    "${object_editor_path}/utils/include"
  ]
}

ohos_shared_library("content_embed_service") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  install_enable = true
  use_exceptions = true
  sources = [
    "${object_editor_path}/system_ability/src/object_editor_manager_stub.cpp",
    "${object_editor_path}/system_ability/src/object_editor_manager_system_ability.cpp",
    "${object_editor_path}/system_ability/src/object_editor_connection.cpp",
    "${object_editor_path}/system_ability/src/object_editor_client_death_recipient.cpp",
    "${object_editor_path}/document/src/object_editor_document.cpp",
    "${object_editor_path}/database/src/object_editor_manager_database.cpp",
    "${object_editor_path}/database/src/object_editor_manager_resmgr.cpp",
    "${object_editor_path}/database/src/object_editor_manager_utils.cpp",
    "${object_editor_path}/common/src/object_editor_config.cpp",
    "${object_editor_path}/common/src/object_editor_format.cpp",
    "${object_editor_path}/common/src/system_utils.cpp",
    "${object_editor_path}/common/src/user_mgr.cpp",
    "${object_editor_path}/common/src/object_editor_extension_proxy.cpp",
    "${object_editor_path}/extension_ability/src/object_editor_client_callback_proxy.cpp",
  ]
  configs = [
    ":libobject_editor_service_private_config",
  ]
  public_configs = [
    "${object_editor_path}/resources/config/build:coverage_flags",
  ]
  deps = [
    "${object_editor_path}/utils:content_embed_utils",
    "${object_editor_path}/document:content_embed_document"
  ]
  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "hilog:libhilog",
    "relational_store:native_rdb",
    "ability_runtime:uri_permission_mgr",
    "ability_runtime:ability_connect_callback_stub",
    "ability_runtime:ability_manager",
    "ability_runtime:app_context",
    "ability_base:zuri",
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "os_account:os_account_innerkits",
    "cJSON:cjson",
    "bundle_framework:appexecfwk_core",
    "bundle_framework:bundle_napi_common",
    "napi:ace_napi",
    "udmf:utd_client",
    "app_file_service:fileuri_native",
    "image_framework:image_native",
    "resource_management:global_resmgr",
    "access_token:libaccesstoken_sdk",
    "common_event_service:cesfwk_innerkits"
  ]
  part_name = "object_editor"
  subsystem_name = "officeservice"
}