# Copyright (c) Huawei Device Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/officeservice/object_editor/object_editor.gni")

config("libobject_editor_utils_private_config") {
    include_dirs = [
        "${object_editor_path}/utils/include",
    ]
}

config("libobject_editor_utils_public_config") {
    include_dirs = [
        "include",
        "include/dfx"
    ]
}

# Build ObjectEditorUtils.so
ohos_shared_library("content_embed_utils") {
    sanitize = {
        cfi = true
        cfi_cross_dso = true
        debug = false
    }
    configs = [
        ":libobject_editor_utils_private_config",
        "${object_editor_path}/resources/config/build:coverage_flags",
    ]
    public_configs = [
        ":libobject_editor_utils_public_config",
    ]
    deps = []
    sources = [
    ]
    external_deps = [
        "common_event_service:cesfwk_innerkits",
        "hilog:libhilog",
        "safwk:system_ability_fwk",
    ]
    defines = []
    part_name = "object_editor"
    subsystem_name = "officeservice"
}